--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <main>
               
             <h1>ШКОЛА ПРОГРАМУВАННЯ ТА АНГЛІЙСЬКОЇ МОВИ </h1> 
-            <img src="/uploads/2021/03/social-media-5187243_1920_0_1615567838.png" width="100%"/>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRCaDvF-yjzMX8fyk4Os6-dfDtF5nOU-vYrTw&s" width="100%"/>
 
         </main>
         </main>
